tests/paczka1/fuzzy1/19291983.err
Error in line 9: {z{ A660 88,4
Error in line 12: A901 S316 48,8
Error in line 2: ZcfbddIooD1 A660 26,5
Error in line 13: 5z5 A660 297,0
Error in line 25: 2vB3 A901 93,2
Error in line 24: A901 S516 56,6
Error in line 28: 2vB3 A660 65,3
Error in line 32: ZcfbddIooD1 A660 12,6
Error in line 31: 2vB3 S316 54,9
